# obs-cmd

./: Cargo.toml  README.md
src/: command.rs  main.rs
