[package]
name = "obs-cmd"
version = "0.18.3"
edition = "2021"
description = "A command to control obs via obs-websocket"
authors = ["Damon Payn <damonpayn@hotmail.co.uk>"]
rust-version = "1.78.0"

[[bin]]
name = "obs-cmd"

[dependencies]
tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros"] }
obws = "0.11.5"
clap = { version = "4.4.8", features = ["derive"] }
url = "2.4.1"


